--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/validator": "^13.12.2",
+     "@types/string-similarity": "^4.0.2",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "prisma": "^5.16.1",
@@ -68,6 +69,7 @@
     "sharp": "^0.34.3",
     "uuidv4": "^6.2.13",
     "validator": "^13.12.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+     "string-similarity": "^4.0.4"
   }
 }
