--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/validator": "^13.12.2",
     "@types/string-similarity": "^4.0.2",
+    "@types/validator": "^13.12.2",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "prisma": "^5.16.1",
@@ -45,6 +45,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.6",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -58,9 +59,9 @@
     "minio": "^8.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "nanoid": "^3.3.6",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
-    "nanoid": "^3.3.6",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -68,9 +69,9 @@
     "passport-local": "^1.0.0",
     "resend": "^4.1.2",
     "sharp": "^0.34.3",
+    "string-similarity": "^4.0.4",
     "uuidv4": "^6.2.13",
     "validator": "^13.12.0",
-    "zod": "^3.24.2",
-    "string-similarity": "^4.0.4"
+    "zod": "^3.24.2"
   }
 }
